# Email-Agent-Using-Langgraph

./: .gitignore  Dockerfile  README.md  langgraph.json  main.py  pyproject.toml
.github/workflows/: deploy.yml
email_agent_using_langgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/email_assistant/: __init__.py  configuration.py  cron.py  email_assistant.py  email_assistant_hitl.py  email_assistant_hitl_memory.py  email_assistant_hitl_memory_gmail.py  langgraph_101.py  schemas.py  utils.py
src/email_assistant/eval/: __init__.py  email_dataset.py  prompts.py
src/email_assistant/tools/: __init__.py  base.py
src/email_assistant/tools/default/: calendar_tools.py  email_tools.py
src/email_assistant/tools/gmail/: __init__.py  gmail_tools.py  load_gmail_api.py  run_ingest.py  setup_cron.py  setup_gmail.py
tests/: conftest.py  run_all_tests.py  test_response.py
